projects/compiler/test/typechecker/map/error_type_mismatch_key.1.out
Error at %FILE_NAME%:1:12
Type mismatch
  |  { a: 123, (456): 789 }
                ^
Expected: String
but instead found: Int
