projects/compiler/test/typechecker/map/error_type_mismatch_key.1.abra
{ a: 123, (456): 789 }